@@ -21,7 +21,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 public class CelulaService {
@@ -473,6 +472,6 @@ public class CelulaService {
         return celula.getMembros()
                 .stream()
                 .map(MembroResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
